[gd_scene load_steps=5 format=3 uid="uid://bw5oq7vvrekcs"]

[ext_resource type="Script" uid="uid://cfnyfx6v1ep7k" path="res://destruction/tank_shot.gd" id="1_hbysm"]
[ext_resource type="Material" uid="uid://ck6nc7ge77nui" path="res://materials/lw_blue1_pulse.tres" id="1_lkmn0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hbysm"]
radius = 0.75
height = 6.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yt1kc"]

[node name="TankShot" type="Node3D"]
script = ExtResource("1_hbysm")

[node name="HitBox" type="Area3D" parent="."]
collision_mask = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(0.15, 0, 0, 0, -6.55671e-09, -0.15, 0, 0.15, -6.55671e-09, 0, 0, 0)
shape = SubResource("CapsuleShape3D_hbysm")

[node name="ShotMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.22, 0, 0, 0, -1.9233e-08, -0.22, 0, 0.44, -9.61651e-09, 0, 0, 0)
mesh = SubResource("CapsuleMesh_yt1kc")
surface_material_override/0 = ExtResource("1_lkmn0")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_timer_timeout"]
